# engineering-metrics-dashboard

./: .env.example  .gitignore  README.md  alembic.ini  api_main.py  main.py  package.json  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 20240101_0001_001_initial_schema.py  20240102_0001_002_deployment_id_bigint.py  20240103_0001_003_environment_varchar_255.py
metrics_dashboard/: __init__.py  backfill.py  clients.py  dora.py  logging_config.py  models.py  render_api.py  reports.py  tasks.py  workflow.py
metrics_dashboard/api/: __init__.py  app.py  schemas.py
metrics_dashboard/api/routers/: backfill.py  metrics.py  raw_data.py
metrics_dashboard/database/: __init__.py  models.py  repository.py  session.py
scripts/: trigger_workflow.py
src/: index.ts  server.ts
src/clients/: github.ts  index.ts  linear.ts  slab.ts
src/metrics/: dora.ts  index.ts
src/reports/: generator.ts  index.ts  notifications.ts
src/types/: index.ts
src/workflows/: metrics-workflow.ts
static/: index.html
static/css/: dashboard.css
static/js/: api.js  charts.js  dashboard.js
tests/: __init__.py
